--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"lint": "eslint ."
 	},
 	"dependencies": {
+		"node-notifier": ">=8.0.1",
+		"node-fetch": ">=2.6.1",
 		"@react-native-community/async-storage": "1.7.1",
 		"@react-native-community/datetimepicker": "2.1.0",
 		"axios": "0.21.1",
